[package]
name = "mvrocketlib-macro"
version = "1.1.0"
edition = "2021"
authors = [
    "Maxim Savenkov"
]
license-file = "LICENSE"
description = "The proc macro crate for the MVRocketLib library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
